--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,3 +24,18 @@
     --color-secondary: #670073;
     --gradient-body: linear-gradient(to bottom, black, #653dab)
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background-color: #2e2e2e;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #653dabc3;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #653dab;
+    border-radius: 5px;
+}
